--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="hidden md:flex items-center justify-around nav-links">
             <a href="https://www.instagram.com/art.vishu_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://wa.me/9284358601?text=Hello%20Vishal" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="mailto:hingumilan786@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+            <a href="mailto:shyam.g5584@gmail.com"><i class="fa-regular fa-envelope"></i></a>
             <a href="tel:+919284358601"><i class="fa-solid fa-phone"></i></a>
         </div>
 
@@ -56,7 +56,7 @@
     <div class="container mx-auto py-2">
         <a href="https://www.instagram.com/art.vishu_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://wa.me/9284358601?text=Hello%20Vishal" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-        <a href="mailto:hingumilan786@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+        <a href="mailto:shyam.g5584@gmail.com"><i class="fa-regular fa-envelope"></i></a>
         <a href="tel:+919284358601"><i class="fa-solid fa-phone"></i></a>
     </div>
 </div>
